test(checkstatus): compare the wire goldens as bytes, not decoded Strings
Review feedback on #413: the class claims byte-identical responses but
asserted on getContentAsString(), which decodes the body first — a change
in the response's character encoding would have passed while the bytes the
client sees changed.

call() now returns getContentAsByteArray() and golden() returns the raw
resource bytes, with Arrays.equals as the gate. The decoded text is
materialised only after a mismatch, to render a readable diff; if the text
turns out identical while the bytes differ, the test says so explicitly —
that is the encoding change the old assertion would have let through. The
regenerate branch writes raw bytes too, so a regenerated golden cannot be
normalised on its way to disk.

No golden changed: all 23 are ASCII today, so this closes a future hole
rather than a live one. CheckStatusWireContractIT 23/23 green under
-P all-tests.

Co-Authored-By: Claude Opus 5 (1M context) <noreply@anthropic.com>